--- a/css/styles.css
+++ b/css/styles.css
@@ -92,19 +92,29 @@ button:hover {
     transform: translateY(-3px);
 }
 
+#code-preview-container {
+    width: 45%; /* Ancho del 45% */
+    margin: 0 auto; /* Centrado */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; /* Para asegurar que todo se alinee */
+    margin-top: 20px;
+}
+
 #code-preview {
     background-color: #222;
     color: #e0e0e0;
     padding: 15px;
-    margin-top: 20px;
     border-radius: 8px;
     text-align: left;
     font-family: monospace;
     font-size: 0.9rem;
     overflow-x: auto;
     white-space: pre-wrap;
-    display: none;
+    display: none; /* Inicialmente oculto */
     max-height: 400px;
+    width: 100%; /* Ocupa el 100% del contenedor */
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
 }
 
